<resources>
  <string name="gallery">Gallery</string>
  <string name="camera_capture_hint">Please make sure your item is visible with good lighting conditions in the box below</string>
  <string name="crop">Crop</string>
  <string name="rotate">Rotate</string>
  <string name="delete">Delete</string>
  <string name="apply">Apply</string>
  <string name="restore">Restore</string>
  <string name="done">Done</string>
  <string name="max_number_selected_images_is">The maximum number of selected photos is</string>
  <string name="select_to_edit">Select to edit</string>
  <string name="front_id">Front ID</string>
  <string name="back_id">Back ID</string>
  <string name="please_add_front_id">Please add the front ID image</string>
  <string name="please_add_back_id">Please add the back ID image</string>
  <string name="id_verification_hint">Capture the front and back of the ID\nEnsure that all the data is visible and clear</string>
  <string name="zoom_hint">Use 2 fingers to zoom.</string>
  <string name="rotate_hint">keep pressing to rotate the image.</string>

  //gallery
  <string name="proccessing_images">Processing images</string>

  //confirmation dialog
  <string name="are_you_sure_you_want_to_close">Are you sure you want to close?</string>
  <string name="cancel">Cancel</string>
  <string name="yes_close">Yes, close</string>
  <string name="all_images_and_edits_you_did_will_be_delete">All modifications made will be discarded!</string>

  //confirmation dialog
  <string name="are_you_sure_to_delete">Are you sure you want to delete this?</string>
  <string name="yes_delete">Yes, Delete</string>

  //error
  <string name="cannot_fetch_image">Cannot fetch image</string>
  <string name="please_crop_all_the_images">Please make sure all images are cropped</string>
  <string name="max_images_are">Max images number is</string>

</resources>
