<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  android:background="@drawable/custom_white_round_20"
  android:clipChildren="true"
  android:orientation="vertical">

  <ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="24dp"
    android:src="@drawable/ic_warning" />

  <TextView
    android:id="@+id/title_tv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:fontFamily="@font/montserrat_bold"
    android:gravity="center"
    android:text="@string/are_you_sure_to_delete"
    android:textColor="@color/black_70"
    android:textSize="18dp" />


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="54dp"
    android:layout_marginTop="32dp"
    android:orientation="horizontal">

    <Button
      android:id="@+id/cancel_btn"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@drawable/custom_gray_round_bottom_left_20"
      android:backgroundTint="@color/tealish"
      android:fontFamily="@font/montserrat_semibold"
      android:gravity="center"
      android:text="@string/cancel"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="14dp" />

    <Button
      android:id="@+id/confirm_delete_btn"
      android:layout_width="0dp"
      android:layout_height="match_parent"
      android:layout_weight="1"
      android:background="@drawable/custom_gray_round_bottom_right_20"
      android:backgroundTint="@color/turquoise_blue"
      android:fontFamily="@font/montserrat_semibold"
      android:gravity="center"
      android:text="@string/yes_delete"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="14dp" />
  </LinearLayout>
</LinearLayout>
