<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Camera.CameraActivity">
  <com.otaliastudios.cameraview.CameraView
    android:id="@+id/camera"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cameraRequestPermissions="true"
    app:cameraAudio="off"/>
  <com.mazadatimagepicker.Camera.RectangleHole
    android:layout_width="match_parent"
    android:layout_height="match_parent"/>
  <ImageView
    android:id="@+id/flash_im"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_flash_on"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="24dp"
    android:layout_marginStart="16dp"/>
  <ImageView
    android:id="@+id/close_im"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_close"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="16dp"/>
  <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="Gallery"
    app:layout_constraintEnd_toStartOf="@id/close_im"
    app:layout_constraintTop_toTopOf="@id/close_im"
    app:layout_constraintBottom_toBottomOf="@id/close_im"
    android:layout_marginEnd="20dp"
    android:textColor="@color/white_74"
    android:drawableStart="@drawable/ic_gallery"
    android:gravity="center"
    android:drawablePadding="6dp"/>
  <View
    android:id="@+id/spacer1"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintHeight_percent="0.131"/>
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/camera_capture_hint"
    android:gravity="center"
    android:layout_marginHorizontal="16dp"
    app:layout_constraintTop_toBottomOf="@id/spacer1"
    android:textColor="@color/white_74"
    android:textSize="12dp"/>

  <ImageView
    android:id="@+id/capture_im"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_capture"
    app:layout_constraintBottom_toTopOf="@id/recycler"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"/>
<androidx.recyclerview.widget.RecyclerView
  android:id="@+id/recycler"
  android:layout_width="match_parent"
  android:layout_height="76dp"
  app:layout_constraintBottom_toTopOf="@id/max_images_tv"
  android:layout_marginBottom="8dp"/>

  <TextView
    android:id="@+id/max_images_tv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/spacer3"
    android:layout_marginStart="16dp"
    android:text="@string/max_number_selected_images_is"
    android:textColor="@color/white_74"
    android:textSize="12dp"/>

  <View
    android:id="@+id/spacer3"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintHeight_percent="0.054"
    app:layout_constraintBottom_toTopOf="@id/options_cl"/>


  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/options_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/spacer2">
    <TextView
      android:id="@+id/crop_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/crop"
      android:textColor="@color/white"
      android:drawableTop="@drawable/ic_crop"
      android:drawablePadding="4dp"
      android:gravity="center"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginStart="29dp"
      android:background="@android:color/transparent"
      android:textAllCaps="false"
      android:alpha="0.38"/>

    <TextView
      android:id="@+id/rotate_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/rotate"
      android:textColor="@color/white"
      android:drawableTop="@drawable/ic_rotate"
      android:drawablePadding="4dp"
      android:gravity="center"
      app:layout_constraintStart_toEndOf="@id/crop_tv"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginStart="23dp"
      android:background="@android:color/transparent"
      android:textAllCaps="false"
      android:alpha="0.38"/>

    <TextView
      android:id="@+id/delete_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/delete"
      android:textColor="@color/white"
      android:drawableTop="@drawable/ic_trash"
      android:drawablePadding="4dp"
      android:gravity="center"
      app:layout_constraintStart_toEndOf="@id/rotate_tv"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginStart="23dp"
      android:background="@android:color/transparent"
      android:textAllCaps="false"
      android:alpha="0.38"/>
    <Button
      android:layout_width="110dp"
      android:layout_height="match_parent"
      android:background="@drawable/custom_blue_round_15"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="16dp"
      android:text="@string/done"
      android:textAllCaps="false"
      android:textColor="@color/white"/>
  </androidx.constraintlayout.widget.ConstraintLayout>

  <View
    android:id="@+id/spacer2"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintHeight_percent="0.0446"
    app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
