<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/black"
  tools:context=".Camera.PickerCameraActivity">

  <androidx.camera.view.PreviewView
    android:id="@+id/preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

  <com.mazadatimagepicker.Camera.CustomViews.RectangleHole
    android:id="@+id/rectangle_hole"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />

  <View
    android:id="@+id/spacer1"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintHeight_percent="0.131"
    app:layout_constraintTop_toTopOf="parent" />

  <View
    android:id="@+id/spacer_top"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintHeight_percent="0.2"
    app:layout_constraintTop_toTopOf="parent" />

  <View
    android:id="@+id/spacer_edit"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintDimensionRatio="H,4:3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spacer_top"
    app:layout_constraintWidth_percent="0.91" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/edit_cl"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:background="@color/black"
    android:visibility="gone"
    app:layout_constraintDimensionRatio="H,4:3"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spacer_top"
    app:layout_constraintWidth_percent="0.91">

    <com.mazadatimagepicker.Camera.CustomViews.ZoomImage
      android:id="@+id/image"
      android:layout_width="match_parent"
      android:layout_height="match_parent"/>

    <com.mazadatimagepicker.Camera.CustomViews.ZoomImage
      android:id="@+id/image_cropper"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:adjustViewBounds="true"
      android:visibility="invisible" />

    <ProgressBar
      android:id="@+id/download_pb"
      android:layout_width="80dp"
      android:layout_height="80dp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/download_tv"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:fontFamily="@font/montserrat_medium"
      android:textColor="@color/white"
      android:textSize="16sp"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <pl.droidsonroids.gif.GifImageView
      android:id="@+id/zoom_gif"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:src="@drawable/gif_zoom"
      android:visibility="gone"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  </androidx.constraintlayout.widget.ConstraintLayout>

  <ImageView
    android:id="@+id/flash_im"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="16dp"
    android:padding="8dp"
    android:src="@drawable/ic_flash_off"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <ImageView
    android:id="@+id/close_im"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="24dp"
    android:layout_marginEnd="16dp"
    android:src="@drawable/ic_close"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/gallery_btn"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:background="@android:color/transparent"
    android:drawableStart="@drawable/ic_image_picker_gallery"
    android:drawablePadding="6dp"
    android:fontFamily="@font/montserrat_semibold"
    android:gravity="center"
    android:text="@string/gallery"
    android:textColor="@color/white_74"
    app:layout_constraintBottom_toBottomOf="@id/close_im"
    app:layout_constraintEnd_toStartOf="@id/close_im"
    app:layout_constraintTop_toTopOf="@id/close_im" />

  <TextView
    android:id="@+id/capture_hint_tv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:fontFamily="@font/montserrat_regular"
    android:gravity="center"
    android:text="@string/camera_capture_hint"
    android:textColor="@color/white_74"
    android:textSize="12dp"
    app:layout_constraintTop_toBottomOf="@id/spacer1" />

  <ImageView
    android:id="@+id/capture_im"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_capture"
    app:layout_constraintBottom_toTopOf="@id/recycler"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/spacer_edit" />

  <TextView
    android:id="@+id/confirm_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="32dp"
    android:layout_marginBottom="20dp"
    android:drawableTop="@drawable/ic_confirm"
    android:drawablePadding="1dp"
    android:fontFamily="@font/montserrat_medium"
    android:gravity="center"
    android:text="@string/apply"
    android:textColor="@color/white"
    android:textSize="12dp"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@id/recycler"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/decline_tv"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="20dp"
    android:drawableTop="@drawable/ic_decline"
    android:drawablePadding="1dp"
    android:fontFamily="@font/montserrat_medium"
    android:gravity="center"
    android:text="@string/restore"
    android:textColor="@color/white"
    android:textSize="12dp"
    android:visibility="gone"
    app:layout_constraintBottom_toTopOf="@id/recycler"
    app:layout_constraintEnd_toEndOf="parent" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler"
    android:layout_width="match_parent"
    android:layout_height="76dp"
    android:layout_marginBottom="8dp"
    app:layout_constraintBottom_toTopOf="@id/max_images_tv" />

  <TextView
    android:id="@+id/max_images_tv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp"
    android:fontFamily="@font/montserrat_regular"
    android:text="@string/max_number_selected_images_is"
    android:textColor="@color/white_74"
    android:textSize="12dp"
    app:layout_constraintBottom_toTopOf="@id/spacer3" />

  <View
    android:id="@+id/spacer3"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toTopOf="@id/options_cl"
    app:layout_constraintHeight_percent="0.03" />


  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/options_cl"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintBottom_toTopOf="@id/spacer2">

    <Button
      android:id="@+id/crop_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="29dp"
      android:alpha="0.38"
      android:background="@android:color/transparent"
      android:drawableTop="@drawable/ic_crop"
      android:drawablePadding="4dp"
      android:fontFamily="@font/montserrat_medium"
      android:gravity="center"
      android:minWidth="1dp"
      android:text="@string/crop"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="11dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <Button
      android:id="@+id/rotate_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="23dp"
      android:alpha="0.38"
      android:background="@android:color/transparent"
      android:drawableTop="@drawable/ic_rotate"
      android:drawablePadding="4dp"
      android:fontFamily="@font/montserrat_medium"
      android:gravity="center"
      android:minWidth="1dp"
      android:text="@string/rotate"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="11dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@id/crop_btn"
      app:layout_constraintTop_toTopOf="parent" />

    <Button
      android:id="@+id/delete_btn"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="23dp"
      android:alpha="0.38"
      android:background="@android:color/transparent"
      android:drawableTop="@drawable/ic_trash"
      android:drawablePadding="4dp"
      android:fontFamily="@font/montserrat_medium"
      android:gravity="center"
      android:minWidth="1dp"
      android:text="@string/delete"
      android:textAllCaps="false"
      android:textColor="@color/white"
      android:textSize="11dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toEndOf="@id/rotate_btn"
      app:layout_constraintTop_toTopOf="parent" />

    <Button
      android:id="@+id/done_btn"
      android:layout_width="110dp"
      android:layout_height="match_parent"
      android:layout_marginEnd="16dp"
      android:background="@drawable/custom_blue_round_15"
      android:fontFamily="@font/montserrat_semibold"
      android:text="@string/done"
      android:textAllCaps="false"
      android:textColor="@color/white"
      app:layout_constraintEnd_toEndOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <View
    android:id="@+id/spacer2"
    android:layout_width="match_parent"
    android:layout_height="0dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintHeight_percent="0.0446" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/loading_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CC000000"
    android:visibility="gone">

    <com.budiyev.android.circularprogressbar.CircularProgressBar
      android:id="@+id/progress"
      android:layout_width="100dp"
      android:layout_height="100dp"
      app:backgroundStrokeColor="#00000000"
      app:backgroundStrokeWidth="2dp"
      app:foregroundStrokeColor="#D0E9EB"
      app:foregroundStrokeWidth="2dp"
      app:indeterminate="true"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <ImageView
      android:id="@+id/loading_im"
      android:layout_width="48dp"
      android:layout_height="48dp"
      android:src="@drawable/images_loading"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
